@@ -11,7 +11,6 @@ element = FiniteElement("Lagrange", "triangle", 1)
 
 v = BasisFunction(element)
 u = BasisFunction(element)
-g = Function(element)
 f = Function(element)
 
 a = v.dx(i)*u.dx(i)*dx
